--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ html {
 body {
   font-family: var(--font-family);
   color: var(--color-text-main);
-  background-color: var(--color-page);
+  background-color: var(--color-page); /* Fondo claro por defecto */
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
